--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
 
             
            
-
-    <img src="assets/img/barner.png" alt="Logo" class="header-logo img-fluid w-100">
+<img style="width: 200px ;" src="assets/img/barner.png" alt="Logo" class="header-logo img-fluid w-100">
 
             <h2 style="color: brown;">
               LIBRE DE COSTO 
