--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - OnePage Bootstrap Template</title>
+  <title>gastrofinlay</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -195,7 +195,7 @@
 
             
            
-<img style="width: 200px ;" src="assets/img/barner.png" alt="Logo" class="header-logo img-fluid w-100">
+<img style="width: 100px ;" src="assets/img/barner.png" alt="Logo" class="header-logo img-fluid w-100">
 
             <h2 style="color: brown;">
               LIBRE DE COSTO 
