--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a style="color: black; font-size: 19px;" href="#inicio">Bienvenida</a></li>
           <li><a style="color: black; font-size: 19px;" href="#conferencias">Conferencias</a></li>
           <li><a style="color: black; font-size: 19px;" href="#organizacion">Organización</a></li>
-          <li><a style="color: black; font-size: 19px;" href="#registro">Registro</a></li>
+          <li><a style="color: black; font-size: 19px;" href="gastroCopy.pdf">Registro</a></li>
           <li><a style="color: black; font-size: 19px;" href="#organizacion">Programa</a></li>
           <li><a style="color: black; font-size: 19px;" href="#contacto">Contacto</a></li>
         </ul>
