--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Teléfono</h3>
-                <p>define telefono</p>
+                <p>+53 55700927</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -542,7 +542,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Correo</h3>
-                <p>definir por si quieren escribir </p>
+                <p>ludmila@infomed.sld.cu </p>
               </div>
             </div><!-- End Info Item -->
 
