--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
         
         <div class="d-flex justify-content-center"> <!-- Contenedor centrado -->
           <ul class="list-unstyled text-start"> <!-- Lista sin viñetas y texto alineado a la izquierda -->
-            <li>Dra.C Ludmila Martínez Leyva .Organizacion y administracion</li>
+            <li>Dra.C Ludmila Martínez Leyva .Organización y administración</li>
             <p></p>
-            <li>Dra.C Misdrialis Martínez Romero. Docencia y documentacion</li>
-            <li>Dr.C René Borges Sandrino. Diseño,difusion y webmaster</li>
+            <li>Dra.C Misdrialis Martínez Romero. Docencia y documentación</li>
+            <li>Dr.C René Borges Sandrino. Diseño,difusión y webmaster</li>
           </ul>
         </div>
 
