--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
                   <div class="member-info">
                     <h4>Dra.C Ludmila Martinez Leyva </h4>
                     <span>Hospital " Carlos J Finlay"</span>
-                    <a href=" https://docs.google.com/presentation/d/1IJ8r03_1J3dsRiO_JqExPvCAMhBG34QF/edit?usp=drive_link&ouid=114273512744086112440&rtpof=true&sd=true  ">  <p>Reseccion endoscopica de polipos del colon con asa 
-                      con asa fria </p> </a>
+                    <a href=" https://docs.google.com/presentation/d/1IJ8r03_1J3dsRiO_JqExPvCAMhBG34QF/edit?usp=drive_link&ouid=114273512744086112440&rtpof=true&sd=true  "> 
+                      <p>Resección endoscópica de pólipos del colon con asa fría </p> </a>
                     <div class="social">
                       <a href=""><i class="bi bi-twitter-x"></i></a>
                       <a href=""><i class="bi bi-facebook"></i></a>
